--- a/app/src/main/res/layout/fragment_weightloss_day1.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day1.xml
@@ -20,7 +20,7 @@
     <TextView
         android:layout_width="234dp"
         android:layout_height="34dp"
-        android:text="Choice of treadmill, bike, or laps"
+        android:text="Choice of treadmill or laps around track"
         android:layout_marginBottom="155dp"
         android:id="@+id/warmupDetail"
         android:layout_gravity="left|center_vertical"
