--- a/app/src/main/res/layout/fragment_weightloss_day4.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day4.xml
@@ -64,13 +64,6 @@
         android:textColor="#ffffff"
         android:textSize="25dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Workout Complete!"
-        android:id="@+id/completeDay1wl"
-        android:layout_gravity="center_horizontal|bottom" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -103,5 +96,19 @@
         android:layout_gravity="right|top"
         android:layout_marginBottom="35dp"
         android:src="@drawable/jogging" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Workout Complete!"
+        android:id="@+id/completeDay1wl"
+        android:layout_gravity="right|bottom" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BACK"
+        android:id="@+id/WLBack"
+        android:layout_gravity="left|bottom" />
 
 </FrameLayout>
