Added page transfer code for weightloss

--- a/app/src/main/res/layout/fragment_weightloss_day2.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day2.xml
@@ -95,7 +95,8 @@
         android:id="@+id/plankImage"
         android:layout_gravity="right|bottom"
         android:layout_marginBottom="35dp"
-        android:src="@drawable/plank" />
+        android:src="@drawable/plank"
+        android:layout_marginRight="10dp" />
 
     <Button
         android:layout_width="wrap_content"
