--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="edu.sc.myapplication.StrengthDayTwo"
+    android:layout_height="match_parent" tools:context="edu.sc.FitLivin.StrengthDayTwo"
     android:id="@+id/containerFitnessP"
     android:background="@drawable/background2">
 
