--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -5,14 +5,6 @@
     android:background="@drawable/background2">
 
     <TextView
-        android:layout_width="157dp"
-        android:layout_height="51dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="You Have:"
-        android:id="@+id/textView10"
-        android:layout_gravity="left|center_vertical" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -40,5 +32,14 @@
         android:background="#060605"
         android:layout_gravity="left|top"
         android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="157dp"
+        android:layout_height="51dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/PointsView"
+        android:layout_gravity="center_horizontal|top"
+        android:textColor="#ffffff"
+        android:layout_marginTop="100dp" />
 
 </FrameLayout>
