--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Current Squat (lbs);"
+        android:text="Current Squat (lbs):"
         android:id="@+id/squatText"
         android:layout_gravity="left|top"
         android:textColor="#ffffff"
@@ -69,10 +69,12 @@
         android:layout_height="85dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/userTotal"
-        android:layout_gravity="right|center_vertical"
+        android:layout_gravity="center"
         android:layout_marginBottom="-80dp"
         android:textColor="#ffffff"
-        android:textSize="35dp" />
+        android:textSize="35dp"
+        android:text="0"
+        android:layout_marginRight="-90dp" />
 
     <TextView
         android:layout_width="144dp"
@@ -82,20 +84,22 @@
         android:textSize="20dp"
         android:textColor="#ffffff"
         android:layout_marginTop="-30dp"
-        android:layout_marginRight="30dp" />
+        android:layout_marginRight="30dp"
+        android:text="0" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="167dp"
         android:layout_height="wrap_content"
         android:id="@+id/userSquat"
         android:layout_gravity="right|top"
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:layout_marginTop="100dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:text="0" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="183dp"
         android:layout_height="wrap_content"
         android:id="@+id/userBench"
         android:layout_gravity="right|top"
@@ -103,5 +107,6 @@
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="10dp"
+        android:text="0" />
 </FrameLayout>
