--- a/app/src/main/res/layout/fragment_strength_day3.xml
+++ b/app/src/main/res/layout/fragment_strength_day3.xml
@@ -72,4 +72,10 @@
         android:id="@+id/Sday3BACK"
         android:layout_gravity="center_horizontal|bottom" />
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_gravity="center" />
+
 </FrameLayout>
