--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -74,7 +74,7 @@
         android:textColor="#ffffff"
         android:textSize="35dp"
         android:text="0"
-        android:layout_marginRight="-90dp" />
+        android:layout_marginRight="-100dp" />
 
     <TextView
         android:layout_width="144dp"
@@ -84,7 +84,7 @@
         android:textSize="20dp"
         android:textColor="#ffffff"
         android:layout_marginTop="-30dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="11dp"
         android:text="0" />
 
     <TextView
@@ -95,7 +95,7 @@
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:layout_marginTop="100dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="0dp"
         android:text="0" />
 
     <TextView
@@ -107,6 +107,7 @@
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_marginTop="15dp"
-        android:layout_marginRight="10dp"
-        android:text="0" />
+        android:layout_marginRight="-10dp"
+        android:text="0"
+        android:layout_marginLeft="20dp" />
 </FrameLayout>
