--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -40,6 +40,9 @@
         android:id="@+id/PointsView"
         android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="126dp"
+        android:text="Points"
+        android:textSize="20dp"
+        android:layout_marginRight="10dp" />
 
 </FrameLayout>
