motivational quote on points page

--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="POINTS"
-        android:id="@+id/textView20"
+        android:id="@+id/pointsHeadingView"
         android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff" />
 
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="You have:"
-        android:id="@+id/textView5"
+        android:id="@+id/youHavePointsView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="121dp"
@@ -44,5 +44,24 @@
         android:text="Points"
         android:textSize="20dp"
         android:layout_marginRight="10dp" />
+
+    <TextView
+        android:layout_width="347dp"
+        android:layout_height="84dp"
+        android:text="&quot;Strength does not come from winning. Your struggles develop your strengths. When you go through hardships and decide not to surrender, that is strength.&quot;"
+        android:id="@+id/arnoldQuote"
+        android:layout_gravity="center"
+        android:layout_marginTop="80dp"
+        android:textStyle="normal|bold|italic"
+        android:textColor="#ffffff" />
+
+    <TextView
+        android:layout_width="178dp"
+        android:layout_height="92dp"
+        android:text="-Arnold Schwarzenegger"
+        android:layout_marginTop="150dp"
+        android:id="@+id/arnoldText"
+        android:textColor="#ffffff"
+        android:layout_gravity="right|center_vertical" />#ffffff" />
 
 </FrameLayout>
